@@ -1,3 +1,8 @@
+2005-02-10  Zoltan Varga  <vargaz@freemail.hu>
+
+	* zlib_macros.c (create_z_stream): Explicitly check for older versions
+	of zlib.
+
 2005-02-08  Zoltan Varga  <vargaz@freemail.hu>
 
 	* pwd.c (Mono_Posix_Syscall_getpwnam_r): Add another part missing from the last patch.
